Fix session port